--- a/layout/_partial/main/footer.ejs
+++ b/layout/_partial/main/footer.ejs
@@ -28,14 +28,14 @@ function layoutDiv() {
     el += '</div>'
   }
   // footer
-  el += '<div class="text">'
+  // el += '< class="text">'
   if (content) {
     el += markdown(content)
   }
   // Adding site runtime and last updated timestamp
-  el += '<center><div class="site-runtime">本站已运行：<span id="site-runtime"></span></div></center>';
-  el += '<center><div class="last-updated">最后更新于：<span id="last-updated"></span></div></center>';
-  el += '</div></footer>'
+  // el += '<center><div class="site-runtime">本站已运行：<span id="site-runtime"></span></div></center>';
+  // el += '<center><div class="last-updated">最后更新于：<span id="last-updated"></span></div></center>';
+  // el += '</div></footer>'
   return el
 }
 %>
