--- a/layout/_partial/main/post_list/post_card.ejs
+++ b/layout/_partial/main/post_list/post_card.ejs
@@ -4,7 +4,7 @@ var obj = {
   image: post.cover
 };
 if (poster) {
-  obj.headline = poster.headline;
+  obj.headline = post-title;
   obj.topic = poster.topic;
   obj.caption = poster.caption;
   obj.color = poster.color;
