fix: 修复文章横幅未使用封面图片的问题
当文章没有指定横幅时，默认使用封面图片作为横幅，以提升用户体验

--- a/layout/_partial/main/navbar/article_banner.ejs
+++ b/layout/_partial/main/navbar/article_banner.ejs
@@ -4,10 +4,13 @@ var banner = {}
 
 if (page.banner) {
   banner.url = page.banner
-} else if (theme.topic.tree[page.topic]?.banner != null) {
+<!-- } else if (theme.topic.tree[page.topic]?.banner != null) {
   banner.url = theme.topic.tree[page.topic]?.banner
 } else if (theme.wiki.tree[page.wiki]?.banner != null) {
-  banner.url = theme.wiki.tree[page.wiki]?.banner
+  banner.url = theme.wiki.tree[page.wiki]?.banner -->
+} else if (page.cover) {
+  // 如果文章有封面，则默认使用封面作为横幅
+  banner.url = page.cover
 }
 banner = Object.assign(banner, page.banner_info)
 // 标题
