--- a/source/css/_components/pages/archives.styl
+++ b/source/css/_components/pages/archives.styl
@@ -4,8 +4,9 @@
     display: inline-block
     font-family: $ff-code
     font-weight: 700
+    font-size: 1.5em
     line-height: 1.2
-    margin-bottom: .5em
+    margin-bottom: 1em
     position: relative
     padding: 4px 0
     color: var(--text-p1)
@@ -19,26 +20,65 @@
       z-index: -1
       border-radius: 4px
       background: $color-theme
+      opacity: 0.8
+
+  .archive-month
+    margin-left: 1rem
+    margin-bottom: 2rem
+    position: relative
+    &:before
+      content: ""
+      position: absolute
+      left: -1rem
+      top: 0
+      bottom: 0
+      width: 2px
+      background: var(--block-hover)
+      
+    .archive-month-header
+      font-family: $ff-code
+      font-weight: 600
+      font-size: 1.1em
+      color: var(--text-p2)
+      margin-bottom: 0.75em
+      padding-left: 0.5rem
+      position: relative
+      &:before
+        content: ""
+        position: absolute
+        left: -1rem
+        top: 50%
+        width: 0.75rem
+        height: 2px
+        background: var(--block-hover)
+
+    .archive-list
+      margin-left: 1rem
+      
   a.post
     display: inline-flex
     align-items: baseline
     margin: 0.25rem 0
     color: var(--text-p1)
-    trans2 color border
-    border-bottom: 1px dashed var(--text-meta)
+    trans2 color background-color
+    padding: 0.25rem 0.5rem
+    width: 100%
+    border-radius: 4px
+    text-decoration: none
     time
       font-family: $ff-code
-      margin-right: 1em
-      font-weight: 700
+      margin-right: 1.5em
+      font-weight: 600
       flex-shrink: 0
       color: var(--text-p4)
+      min-width: 2em
+    span
+      flex-grow: 1
     &:hover
-      border-bottom: 1px solid $color-theme
       color: var(--text)
+      background: var(--block-hover)
       time
         color: $color-theme
-
-
 
 .post-list #cats
   padding: 0
