fix(md.styl): 将标题文本对齐方式从居中更改为左对齐

--- a/source/css/_components/md.styl
+++ b/source/css/_components/md.styl
@@ -29,7 +29,7 @@
   ol,ul
     margin-left: 0.5em
   h1,h2,h3,h4,h5,h6
-    text-align: center
+    text-align: left
     >a:first-child
       display: none
   h2
