feat: 给文章页面添加导航栏

--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -40,6 +40,7 @@ function layoutDiv() {
   if (page.nav_tabs) {
     el += partial('_partial/main/navbar/nav_tabs_blog')
   }
+  el += partial('_partial/main/navbar/nav_tabs_blog')
   if (page.h1 || page.title || (page.content && page.content.length > 0)) {
     el += partial('_partial/main/navbar/article_banner')
   }
