--- a/source/css/_components/partial/article-banner.styl
+++ b/source/css/_components/partial/article-banner.styl
@@ -1,8 +1,9 @@
 .article.banner
   --text-banner: var(--text)
   background: var(--block)
-  margin: 0
+  margin: 5px 0 0 0
   height: unset
+  top: 10
 
 .article.banner
   .bg+.content
