feat: 在导航栏中添加新链接
- 在导航栏中新增“虫洞”和“中文博客列表”链接，丰富用户导航选项。
- 确保新链接在子菜单中显示，提升用户体验。

--- a/layout/_partial/main/navbar/nav_tabs_blog.ejs
+++ b/layout/_partial/main/navbar/nav_tabs_blog.ejs
@@ -37,6 +37,8 @@ function layoutDiv() {
   el += '<a href="#">世界</a>';
   el += '<div class="submenu">';
   el += '<a href="https://www.travellings.cn/go.html" target="_blank">开往</a>';
+  el += '<a href="https://foreverblog.cn/go.html" target="_blank">虫洞</a>';
+  el += '<a href="https://zhblogs.cn/random" target="_blank">中文博客列表</a>';
   el += '</div>';
   el += '</div>';
 
